antialiasing off 이슈 & zoom in, out 이슈 해결 이전 커밋

--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,15 @@
 
 .canvas-container {
   position: absolute !important;
+  top: 0;
+  left: 0;
 }
 
 #masking {
-  background: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+
+  z-index: 3;
 }
